Finish Navbar coding

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <nav>
-            <div class="logo">folio.</div>
+            <div class="logo">folio<b>.</b></div>
             <ul class="navItems">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
