--- a/index.html
+++ b/index.html
@@ -25,7 +25,23 @@
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
         </nav>
-        
+        <div class="wrapper">
+            <div class="cols cols0">
+                <span class="topline">Hello</span>
+                <h1>I'm <span class="multiText">Coder</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit reiciendis libero dolores itaque quidem nulla?</p>
+                <div class="btns">
+                    <button>Download CV</button>
+                    <button>Hire me</button>
+                </div>
+            </div>
+            <div class="cols cols1">
+                <div class="imgbox">
+                    <img src="/splash.png" id="splash">
+                    <img src="/boy.png" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
